# nanovna_headless

./: .gitignore  CMakeLists.txt  Font5x7.c  Makefile  README.md  bootstrap.sh  dsp.c  fft.h  flash.c  ili9341.c  main.c  nanovna.h  numfont20x22.c  plot.c  si5351.c  ui.c  usbcfg.c
NANOVNA_STM32_F072/: board.c  board.h
cmake/: toolchain.cmake
host/: CMakeLists.txt  bootstrap.sh  cobs.cpp  cobs.h  cobstest.cpp  main.cpp  sincos.cpp
python/: chplot.py  nanovna.py  tblplot.py
src/: adc.c  chprintf.c  chprintf.h  cmdhandler.c  cmdhandler.h  dsp.c  dsp.h  main.c  main.cpp  nanovna.h  si5351.c  strconvert.c  strconvert.h  tlv320aic3204.c  tlv320aic3204.h
